@@ -7,7 +7,7 @@ mod_id=mmofx
 # your properties
 curse_slug=mine-and-fx
 curse_id=0
-mod_version=0.0.3
+mod_version=0.0.4
 
 neo_version=47.1.54
 
